# cal.minet.net

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  stack.yaml
backend/: Dockerfile.dev  Dockerfile.prod  find_rejected.py  fixtures.py  load_fixtures.py  make_superadmin.py  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  migration_runner.py  models.py  schemas.py
backend/app/api/: admin.py  auth.py  cas.py  events.py  groups.py  ics.py  notifications.py  oidc.py  organization_links.py  organizations.py  short_links.py  subscriptions.py  tags.py  upload.py  users.py
backend/app/email/: utils.py
backend/app/email/templates/: base.html  event_approved.html  event_rejected.html
backend/app/services/: storage.py
backend/app/utils/: email.py
backend/fixtures/: memberships.json  organizations.json  subscriptions.json  users.json
backend/migrations/: 001_add_auto_approved_to_tag.py  002_create_ldap_user_table.py  003_add_featured_to_event.py  004_add_push_tokens.py  005_remove_show_on_schedule.py  006_add_short_links.py  006_replace_chroma_hue_with_hex_colors.py  007_chroma_hue_with_hex_colors.py
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Sidebar.vue  (+27 more)
nginx/: Dockerfile  nginx.conf  nginx.dev.conf  nginx.prod.conf  wait-for.sh
nginx/certs/: self-signed.crt  self-signed.key
pgadmin/: servers.json
(+29 files in other folders)
